# codingame

./: README.md
fall-challenge-2023/: CMakeLists.txt  main.cpp
fall-challenge-2023/utils/: debug.h
merger/: .gitignore  CMakeLists.txt  README.md  main.cpp
spring-challenge-2023-ants/: Action.cpp  Action.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  CubeCoord.cpp  CubeCoord.h  Player.h  README.md  main.cpp
spring-challenge-2023-ants/utils/: debug.h  draw.cpp  draw.h
spring-challenge-2023-ants/utils/logs/: input.txt
